<resources>
    <string name="app_name">eCommerce</string>
    <string name="slogan_text">Find, Discover, Choose and Buy anything online</string>
    <string name="join_now">Join Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="admin">I`m an Admin?</string>
    <string name="not_admin">I`m not an Admin</string>
    <string name="create_account">Create An Account</string>
    <string name="enter_password">Password</string>
    <string name="enter_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_homes">HomesActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_a">aActivity</string>
</resources>