<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/applogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/register_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDrawable="@drawable/custom_progress_bar_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/register_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/register_logo">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteish"
            android:textSize="17sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_style"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteish"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_style"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteish"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/buttons_style"
        android:padding="10dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_inputs" />



</androidx.constraintlayout.widget.ConstraintLayout>